Fixing Java 9 issue.